--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ border-radius: 20px;
 	
 		<canvas id="canvas"></canvas>
 		
-		<div class="h">Happy New Year 2023 Babe😘</div>
+		<div class="h">Happy New Year 2023 Babe😘 <a href="https://elite6802.github.io/ny2/"><button class="btn">NEXT</button></a> </div>
 		
-<div class="start">KEVO LOVES YOU JABIN💖<a href="https://elite6802.github.io/ny2/"><button class="btn">NEXT</button></a></div>
+<div class="start">KEVO LOVES YOU JABIN💖</div>
  <div class="a">💥I am the luckiest man on earth to have you as my girlfriend😊. Every day with you seems like a dream🥺 that I never want to wake up from😩! When you are with me☹️, every single moment is filled with magic💥🤩. Wishing you a delighted🥳 and the happiest new year filled with love Honey🥳💖💥</div>
 <script>
 window.onload = function() {
