--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ border-radius: 20px;
 	
 		<canvas id="canvas"></canvas>
 		
-		<div class="h">Happy New Year 2023 Babe😘 </div>
+		<div class="h">Happy New Year 2023 Babe😘 <button class="btn" <a href="https://elite6802.github.io/ny2/">NEXT</a></button> </div>
 		
-<div class="start">KEVO LOVES YOU JABIN💖 <a href="https://elite6802.github.io/ny2/"><button class="btn">NEXT</button></a> </div>
+<div class="start">KEVO LOVES YOU JABIN💖 </div>
  <div class="a">💥I am the luckiest man on earth to have you as my girlfriend😊. Every day with you seems like a dream🥺 that I never want to wake up from😩! When you are with me☹️, every single moment is filled with magic💥🤩. Wishing you a delighted🥳 and the happiest new year filled with love Honey🥳💖💥</div>
 <script>
 window.onload = function() {
@@ -91,10 +91,10 @@ function init() {
   idleBurst();
 
   $(window).resize(resize);
-/*
+
   $(window).mousemove(function(event) {
 	if(!active) {
- $('.start').fadeOut(0);
+ $('.start').fadeOut(700);
 	}
 	active = true;
 	lastX = mouseX;
@@ -116,7 +116,6 @@ function idleBurst() {
 		setTimeout(idleBurst, 2200);
 	}
 }
-*/
 function resize() {
 	stageWidth = $(window).width();
 	stageHeight = $(window).height();
